--- a/style.css
+++ b/style.css
@@ -209,8 +209,8 @@ body{
     background-color:  rgb(0,62,70);
     padding-top: 100px;
     color:white;
-    border-top-left-radius:300px ;
-    border-top-right-radius: 100px;
+    border-top-left-radius:100px ;
+    border-top-right-radius: 50px;
 }
 #logo1{
     display: flex;
@@ -249,7 +249,7 @@ body{
     display:flex;
 
 }
-@media only screen  and (min-width: 320px) and (max-width : 480px) {
+@media all and (min-width: 280px) and (max-width : 1024px) {
     #container{
         border: 5px solid rgb(141,210,207);
     }
